php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #49289 bcmath module doesn't compile with phpize configure
Submitted: 2009-08-18 19:21 UTC Modified: 2009-08-20 11:19 UTC
Votes:1
Avg. Score:3.0 ± 0.0
Reproduced:0 of 0 (0.0%)
From: paulobitfranca at netsite dot com dot br Assigned: jani (profile)
Status: Closed Package: BC math related
PHP Version: 5.*, 6 (2009-08-20) OS: *
Private report: No CVE-ID: None
 [2009-08-18 19:21 UTC] paulobitfranca at netsite dot com dot br
Description:
------------
I don't know how to white in english very well, but I will try.

I'm using Slackware Linux, PHP5.3.0 and Apache. I'm trying to compile the module bcmath.so for PHP. I type 'phpize' and 'configure', but, when I type 'make', I get an Error.

Reproduce code:
---------------
init.c:129: warning: passing argument 1 of 'bc_copy_num' makes pointer from integer without a cast
make: ** [libbcmath/src/init.lo] Erro1



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-08-19 08:29 UTC] derick@php.net
That is a warning, and not an error. Please paste the *full* output at http://php.pastebin.com and provide the link to that paste here.
 [2009-08-20 02:17 UTC] paulobitfranca at netsite dot com dot br
It's the full output:

http://php.pastebin.com/m443ada65
 [2009-08-20 11:14 UTC] jani@php.net
Someone broke this again. Will fix in a bit.
 [2009-08-20 11:19 UTC] svn@php.net
Automatic comment from SVN on behalf of jani
Revision: http://svn.php.net/viewvc/?view=revision&revision=287499
Log: - Fixed bug #49289 (bcmath module does not compile with phpize configure).
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC