- Fixed bug #49289 (bcmath module does not compile with phpize configure).